# clipper-gemmi

./: .gitignore  CMakeLists.txt  clipper.pc  clipper.pc.cmakein  clipper.pc.in  config.h  config.h.cmakein  config.status  configure  configure.ac  libtool  run_install.sh
clipper/: clipper-gemmi.h  clipper-minimol.h
clipper/cif/: cif_data_io.cpp  cif_data_io.h
clipper/core/: fftmap.cpp  fftmap_sparse.cpp  hkl_data.h  xmap.h
clipper/gemmi/: clipper_gemmi.cpp  clipper_gemmi.h  clipper_gemmi_model.cpp  clipper_gemmi_model.h
clipper/minimol/: minimol.cpp  minimol.h  minimol_io.cpp  minimol_io.h  minimol_io_gemmi.cpp  minimol_io_gemmi.h  minimol_io_mmdb.cpp  minimol_io_mmdb.h  minimol_io_seq.cpp  minimol_io_seq.h  test_minimol_gemmi.cpp  test_minimol_gemmi.h
clipper/mmdb/: clipper_mmdb.cpp
cmake/: source.cmake
examples/: clippergemmi_mapmtztest.cpp  clippergemmi_minimoltest.cpp
